// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MembersPanel > should display an empty result if no matching members found 1`] = `
"<div class="ml-2">
  <div class="mr-2 mt-4"><label class="inline-block mb-0.5" for="oc-textinput-3">Filter members
      <!--v-if-->
    </label>
    <div class="relative">
      <!--v-if--> <input id="oc-textinput-3" aria-invalid="false" class="oc-text-input oc-input" type="text" value="no-match">
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-testid="space-members">
    <div>
      <h3 class="font-semibold text-base">No members found</h3>
    </div>
    <div>
      <!--v-if-->
    </div>
    <div>
      <!--v-if-->
    </div>
    <div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`MembersPanel > should render all members accordingly to their role assignments 1`] = `
"<div class="ml-2">
  <div class="mr-2 mt-4"><label class="inline-block mb-0.5" for="oc-textinput-1">Filter members
      <!--v-if-->
    </label>
    <div class="relative">
      <!--v-if--> <input id="oc-textinput-1" aria-invalid="false" class="oc-text-input oc-input" type="text" value="">
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-testid="space-members">
    <!--v-if-->
    <div>
      <div class="mb-4" data-testid="space-members-role-Managers">
        <h3 class="font-semibold text-base">Managers</h3>
        <members-role-section-stub permissions="undefined"></members-role-section-stub>
      </div>
    </div>
    <div>
      <div class="mb-4" data-testid="space-members-role-Editors">
        <h3 class="font-semibold text-base">Editors</h3>
        <members-role-section-stub permissions="undefined"></members-role-section-stub>
      </div>
    </div>
    <div>
      <div class="mb-4" data-testid="space-members-role-Viewers">
        <h3 class="font-semibold text-base">Viewers</h3>
        <members-role-section-stub permissions="undefined"></members-role-section-stub>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
